# PointCloud_Classification_using_optimized_PointNet_by_kdtree

./: README.md  data_robust_test.py  evaluate.py  provider.py  train.py
feature_scaling_params/: cal_avg_stddev.py
models/: pointnet_cls_basic.py
pcd2txt/: CMakeLists.txt  pcd2txt.cpp
utils/: data_prep_util.py
